@@ -1,6 +1,7 @@
 buildscript {
   dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:3.2.3")
+    classpath("net.serenity-bdd:serenity-gradle-plugin:3.6.22")
+    classpath("au.com.dius.pact:au.com.dius.pact.gradle.plugin:4.4.0-beta.1")
   }
 }
 
@@ -10,23 +11,28 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.1.0'
-  id 'org.springframework.boot' version '2.7.14'
-  id 'uk.gov.hmcts.java' version '0.12.43'
-  id 'org.owasp.dependencycheck' version '8.2.1'
-  id 'com.github.ben-manes.versions' version '0.42.0'
-  id 'org.sonarqube' version '3.0'
-  id "io.freefair.lombok" version "6.2.0"
+  id 'io.spring.dependency-management' version '1.1.4'
+  id 'org.springframework.boot' version '2.7.18'
+  id 'uk.gov.hmcts.java' version '0.12.50'
+  id 'org.owasp.dependencycheck' version '9.0.4'
+  id 'com.github.ben-manes.versions' version '0.50.0'
+  id 'org.sonarqube' version '3.5.0.2730'
+  id "io.freefair.lombok" version "6.6.3"
   id 'org.flywaydb.flyway' version '5.2.4'
-  id "info.solidsoft.pitest" version '1.5.2'
+  id "info.solidsoft.pitest" version '1.15.0'
 }
+
+apply plugin: 'java'
+apply plugin: 'net.serenity-bdd.serenity-gradle-plugin'
+apply plugin: 'project-report'
+apply plugin: 'idea'
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
 allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+  sourceCompatibility = '17'
+  targetCompatibility = '17'
 }
 
 sourceSets {
@@ -83,10 +89,15 @@ task integration(type: Test, description: 'Runs the integration tests.', group: 
   // environment("APPINSIGHTS_INSTRUMENTATIONKEY", "test-key")
 }
 
-task smoke(type: Test) {
-  description = "Runs Smoke Tests"
+task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
   testClassesDirs = sourceSets.smokeTest.output.classesDirs
   classpath = sourceSets.smokeTest.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 tasks.withType(Test) {
@@ -104,7 +115,7 @@ checkstyle {
 }
 
 pmd {
-  toolVersion = "6.18.0"
+  toolVersion = "6.55.0"
   ignoreFailures = true
   sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
   reportsDir = file("$project.buildDir/reports/pmd")
@@ -137,6 +148,7 @@ sonarqube {
 project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
 
 pitest {
+  junit5PluginVersion = '1.1.2'
   targetClasses = ['uk.gov.hmcts.reform.timedevent.*']
   excludedClasses = [
       'uk.gov.hmcts.reform.timedevent.infrastructure.config.*',
@@ -146,6 +158,8 @@ pitest {
   outputFormats = ['XML', 'HTML']
   timestampedReports = false
   failWhenNoMutations = false
+  verbose = true
+  mutationThreshold = 60
 }
 
 project.tasks['pitest'].group = "Verification"
@@ -177,31 +191,31 @@ dependencyManagement {
     }
 
     //CVE-2021-27568, CVE-2022-45688, CVE-2023-1370
-    dependency group: 'net.minidev', name: 'json-smart', version: '2.4.10'
+    dependency group: 'net.minidev', name: 'json-smart', version: '2.5.0'
 
     dependencySet(group: 'commons-fileupload', version: '1.5') {
       entry 'commons-fileupload'
     }
 
     //CVE-2022-38750, CVE-2022-38751, CVE-2022-38752
-    dependency group: 'org.yaml', name: 'snakeyaml', version: '2.0'
+    dependency group: 'org.yaml', name: 'snakeyaml', version: '2.2'
 
-    dependencySet(group: 'com.fasterxml.jackson.core', version: '2.15.2') {
+    dependencySet(group: 'com.fasterxml.jackson.core', version: '2.16.0') {
       entry 'jackson-databind'
       entry 'jackson-core'
       entry 'jackson-annotations'
     }
 
-    dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.15.2') {
+    dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.16.0') {
       entry 'jackson-dataformat-yaml'
     }
 
-    dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.15.2') {
+    dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.16.0') {
       entry 'jackson-datatype-jsr310'
       entry 'jackson-datatype-jdk8'
     }
 
-    dependencySet(group: 'com.fasterxml.jackson.module', version: '2.15.2') {
+    dependencySet(group: 'com.fasterxml.jackson.module', version: '2.16.0') {
       entry 'jackson-module-parameter-names'
       entry 'jackson-module-afterburner'
     }
@@ -219,11 +233,14 @@ repositories {
 }
 
 def versions = [
-    junit           : '5.7.0',
-    junitPlatform   : '1.7.2',
+    junit           : '5.10.1',
+    junitPlatform   : '1.10.1',
     reformLogging   : '5.1.7',
-    springDoc       : '1.6.8',
-    serenity        : '3.2.3'
+    springDoc       : '1.7.0',
+    serenity        : '3.9.8',
+    sonarPitest     : '0.5',
+    pitest          : '1.15.3',
+    restAssured     : '5.3.2'
 ]
 
 ext.libraries = [
@@ -237,17 +254,35 @@ ext.libraries = [
 ]
 
 dependencies {
+  modules {
+    module("org.codehaus.groovy:groovy") {
+      replacedBy("org.apache.groovy:groovy", "conflicts in current rest-assured version")
+    }
+    module("org.codehaus.groovy:groovy-xml") {
+      replacedBy("org.apache.groovy:groovy-xml", "conflicts in current rest-assured version")
+    }
+    module("org.codehaus.groovy:groovy-json") {
+      replacedBy("org.apache.groovy:groovy-json", "conflicts in current rest-assured version")
+    }
+  }
+
+  implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.5.0-rc1'
+
+  implementation group: 'org.apiguardian', name:'apiguardian-api', version: '1.1.2'
+
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-quartz'
+  implementation(group: 'org.springframework.boot', name: 'spring-boot-starter-quartz') {
+    exclude group: 'org.quartz-scheduler', module: 'quartz'
+  }
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.1'
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.1'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.8'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.7'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
 
   implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client'
@@ -255,25 +290,30 @@ dependencies {
   implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose'
 
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '5.2.4'
-  implementation group: 'org.postgresql', name: 'postgresql', version: '42.4.3'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.0'
 
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
+
+  implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13'
+  implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.13'
 
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
-  implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
-  implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.3'
+  implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.4'
+  implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.9'
 
-  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
-  implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
+  implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
 
-  implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+  implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
 
   implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'
   testImplementation libraries.junit5
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.83'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.83'
 
   testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
     exclude group: 'junit', module: 'junit'
@@ -282,19 +322,24 @@ dependencies {
 
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 
-  testImplementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '4.0.1'
+  testImplementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '4.0.2'
 
-  testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.0.2'
-  testImplementation group: 'com.h2database', name: 'h2', version: '1.4.197'
+  testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
+  testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
-  testImplementation group: 'org.pitest', name: 'pitest', version: '1.5.2'
+  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+  testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.15.0"
+  testImplementation "org.codehaus.sonar-plugins:sonar-pitest-plugin:${versions.sonarPitest}"
+
+  testImplementation(group: 'io.rest-assured', name: 'rest-assured-all', version: versions.restAssured)
+  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
 
-  testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.6') {
+  testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.8') {
     exclude group: "com.github.tomakehurst", module: "wiremock-standalone"
   }
 
@@ -311,7 +356,6 @@ dependencies {
 
 test {
   useJUnitPlatform()
-  failFast = true
 }
 
 mainClassName = 'uk.gov.hmcts.reform.timedevent.Application'
